# llm_service_py

./: .gitignore  CHANGELOG.md  README.md  answer.Dockerfile  api-service.Dockerfile  api.Dockerfile  docker-compose.yml  history-service.Dockerfile  history.Dockerfile  kafka-service.Dockerfile  kafka-ui.yml  llm-service.Dockerfile  mypy.ini  ollama.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
answer_service/: answer_service.py
api_service/: api_service.py
common/: kafka.py  kafka_async.py  model.py  ollama.py  postgres.py
history_service/: history_service.py
kafka_service/: kafka_service.py
llm_service/: llm_service.py
scripts/: build_images.sh  git_tag.sh  local_run.sh  run.sh
tests/: bdd_helper.py
tests/answer_service/: answer_service_test.py
tests/api_service/: api_service_test.py
tests/common/: kafka_test.py  postgress_test.py
tests/e2e/: api_service_e2e_test.py  history_service_e2e_test.py  kafka_service_e2e_test.py  llm_service_e2e_test.py  postgres_test.py
tests/integration/: api_service_it_test.py  history_service_it_test.py  kafka_it_test.py  kafka_service_it_test.py  llm_service_it_test.py  llm_servie_it_test.py  ollama_it_test.py  postgres_it_test.py
tests/unit/: api_service_unit_test.py  history_service_unit_test.py  llm_service_unit_test.py
tests/unit/answer_service/: answer_service_test.py
tests/unit/api_service/: api_service_unit_test.py
