[tool.poetry]
name = "ui-step3"
version = "0.1.0"
description = ""
authors = ["Reynaldo Gil <gilcu2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
httpx = "^0.27.2"
pytest = "^8.3.3"
ollama = "^0.3.3"
aiokafka = "^0.11.0"
pytest-asyncio = "^0.24.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
kafka-python-ng = "^2.2.3"
pytest-httpx = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
