[tool.poetry]
name = "llm-service"
version = "0.1.3"
description = ""
authors = ["Reynaldo Gil <gilcu2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.3", extras = ["standard"] }
httpx = "^0.28.1"
ollama = "^0.4.7"
aiokafka = "^0.12.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
kafka-python-ng = "^2.2.3"
psycopg-binary = "^3.2.5"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-httpx = "^0.35.0"
pytest-asyncio = "^0.25.3"
pytest-postgresql = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-timeout = "*"
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = "*"
mkdocs-material = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest-github-actions-annotate-failures = "*"
python-kacl = "*"
pyupgrade = "*"
#tryceratops = "*"
#pyright = "^1.1.275"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
src_paths = ["api_service","history_service","llm_service","common", "tests"]

[tool.black]
target-version = ["py312"]
include = '\.pyi?$'
